# Ask

./: README.md  ROADMAP.md  USER_STORIES.md  pyproject.toml  requirements.txt
docs/: demo_scenario.md  eight_disciplines_testing.md  issue_0021_runtime_loop_followup.md  terminal_demo_public_contract_assessment.md
src/: debug-test.py  demo-satellite-choice.py  demo.py  demo_terminal_scenarios.py  test1.py
src/ask/: __init__.py  canonical_demo.py  client.py  config.py  demo.py  demo_terminal_scenarios.py  dispatch.py  reporting.py  schema_flow.py  session_store.py  specs.py  types.py
src/ask/channels/: mobile.py  satellite.py
src/ask/storage/: __init__.py  base.py  memory.py  sqlite.py
src/ha_ask/: __init__.py  apply.py  canonical_demo.py  client.py  config.py  demo.py  demo_report.py  dispatch.py  errors.py  escalation.py  evidence.py  finalize.py  interaction_types.py  planning.py  reporting.py  schema_flow.py  session_store.py  specs.py  types.py
src/ha_ask/channels/: discord.py  mobile.py  terminal.py  terminal_ui.py
src/ha_ask/storage/: __init__.py  base.py  memory.py  sqlite.py
tests/: test_apply.py  test_ask_client.py  test_cancel_semantics.py  test_canonical_demo.py  test_config.py  test_demo.py  test_demo_entrypoints.py  test_demo_terminal_scenarios.py  test_discord_channel.py  test_dispatch.py  test_dispatch_async.py  test_escalation.py  test_finalize_validation.py  test_import_surfaces.py  test_interaction_types.py  test_mobile_slots.py  test_package_rename_contract.py  test_planning_policy.py  test_reporting.py  test_schema_flow.py  test_storage_backends.py  test_terminal_channel.py
